add favorit controller

--- a/www/templates/detail-object.html
+++ b/www/templates/detail-object.html
@@ -1,6 +1,7 @@
-<ion-view view-title="Account">
+<ion-view view-title="detail">
     <ion-content>
         <div class="info">
+            <button ng-click="addFavorite()">Add to favorites</button>
             <h4>{{ objectDetails.title }}</h4>
             <p>{{ objectDetails.price_formatted }}</p>
 
