--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -10,8 +10,8 @@
     </ion-tab>
 
     <!-- Account Tab -->
-    <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-        <ion-nav-view name="tab-account"></ion-nav-view>
+    <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/main/favorite">
+        <ion-nav-view name="favorite"></ion-nav-view>
     </ion-tab>
 
 </ion-tabs>
