--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,5 +1,6 @@
 <ion-view view-title="PropertyCross">
     <ion-content class="padding">
+        <a  ui-sref="main.favorite">Favorite</a>
 
         <h4>
             Welcome to Nestoria, a site designed to make finding a property as easy as using a search engine.
