--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -5,12 +5,12 @@
     </ion-tab>
 
     <!-- Chats Tab -->
-    <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/main/detail">
+    <ion-tab title="DETAILS" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/main/detail">
         <ion-nav-view name="detail"></ion-nav-view>
     </ion-tab>
 
     <!-- Account Tab -->
-    <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/main/favorite">
+    <ion-tab title="FAVORITES" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/main/favorite">
         <ion-nav-view name="favorite"></ion-nav-view>
     </ion-tab>
 
